# streamlit-carousel-slider

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  biome.json  example.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
streamlit_carousel_slider/: __init__.py
streamlit_carousel_slider/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
streamlit_carousel_slider/frontend/src/: carousel-slider.tsx  carousel.tsx  main.tsx  utils.ts
