[tool.poetry]
name = "streamlit-carousel-slider"
version = "0.1.0"
description = "Carousel slider component for streamlit."
authors = ["ryone9re <ryoichi.kurimoto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
